[package]
name = "databasetool"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
chrono = "0.4"
postgres = "0.19"
url = "2"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid", "bigdecimal"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
rust_decimal = "1.0"
regex = "1.10"
sqlparser = "0.40.0"
aws-config = "1.0"
flate2 = "1.0"
tar = "0.4"
tempfile = "3.8"
aws-smithy-types = "0.55"
tokio-util = { version = "0.7", features = ["io"] }
aws-sdk-s3 = { version = "1.82.0", features = ["behavior-version-latest"] }
